fix: prevent other editors from clipping tooltips

--- a/src/less/components/editors.less
+++ b/src/less/components/editors.less
@@ -24,6 +24,13 @@
   }
 }
 
+.mosaic-window {
+  &.focused {
+    z-index: 2;
+  }
+  z-index: 1;
+}
+
 @keyframes fadein {
   from { opacity: 0; }
   to { opacity: 1; }
